--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,19 @@
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    display-request-duration: true
+    groups-order: DESC
+    operationsSorter: method
+    disable-swagger-default-url: true
 
 logging:
   config: classpath:logback-spring.xml
 
 app:
-  name: Tech Interface - Swagger and Profiles Tutorial
+  name: linkconverter
 
 server:
-  port: 8081
+  port: 8080
 
 spring:
   datasource:
@@ -14,8 +21,11 @@ spring:
     username: root
     password: root
     url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/trendyol_db
-
+  sql:
+    init:
+      mode: always
   jpa:
+    defer-datasource-initialization: true
     hibernate:
       ddl-auto: update
   mvc:
